--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Boilerplate application for building REST APIs",
   "author": "Alan Thompson <alan@amida.com>",
   "license": "Apache-2.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "private": false,
   "engines": {
     "node": ">= 14.21.1",
@@ -17,7 +17,7 @@
     "build": "gulp",
     "copy": "gulp copy",
     "babel": "gulp babel",
-    "lint": "esw *.js server config --color",
+    "lint": "esw *.js src --color",
     "lint:watch": "yarn lint -- --watch",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -70,7 +70,7 @@
     "express-jwt": "^8.4.1",
     "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
-    "gulp": "4.0.2",
+    "gulp": "^5.0.0",
     "gulp-load-plugins": "^2.0.8",
     "helmet": "^6.1.5",
     "http-status": "^1.6.2",
@@ -104,13 +104,13 @@
     "eslint-watch": "^8.0.0",
     "gulp-babel": "8.0.0",
     "gulp-newer": "^1.4.0",
-    "gulp-nodemon": "^2.5.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^2.6.5",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jsdom": "^21.1.1",
-    "validate-commit-msg": "^2.6.1",
+    "validate-commit-msg": "^1.1.3",
     "webpack": "5.79.0"
   },
   "husky": {
